add support for gstreamer/alsa/oss instead of pulse for media-keys https://bugzilla.gnome.org/show_bug.cgi?id=571145 patch stolen from debian: http://patch-tracker.debian.org/patch/series/view/gnome-settings-daemon/2.30.2-2+squeeze1/20_gstreamer.patch